--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,5 @@
-$z-index--logo: 40;
-$z-index--gnb: 50;
-$z-index--menu: 60;
 $z-index--overlay: 7;
-$z-index--loading: 40;
+$z-index--logo: 10;
+$z-index--loading: 10;
+$z-index--gnb: 20;
+$z-index--menu: 30;
