--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -165,14 +165,16 @@
 		position: fixed;
 		top: 1rem;
 		right: 1rem;
+		z-index: 1;
 		display: flex;
 		align-items: center;
-		z-index: $z-index--menu;
 		width: 3.6rem;
 		height: 2.9rem;
 		color: #fff;
 		mix-blend-mode: difference;
-
+		.is-nav-open & {
+			z-index: $z-index--menu;
+		}
 		&::before {
 			content: '';
 			position: absolute;
